tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__operator__add_num_nil.lox.snap
---
source: tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/operator/add_num_nil.lox
---
success: false
exit_code: 70
----- stdout -----

----- stderr -----
Error: type error in binary operator `+`: lhs has type `Number`, but rhs has type `Nil`
   ╭─[craftinginterpreters/test/operator/add_num_nil.lox:1:1]
   │
 1 │ 1 + nil; // expect runtime error: Operands must be two numbers or two strings.
   │ ┬ ┬ ─┬─  
   │ │ │  ╰─── this is of type `Nil`
   │ │ │      
   │ │ ╰────── the operator in question
   │ │        
   │ ╰──────── this is of type `Number`
   │ 
   │ Help: operator `+` can only be applied to two numbers or two strings
───╯
